[project]
name = "crafts-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dyliu0312", email = "liudy0312@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
crafts-stack = "crafts_stack:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
