[project]
name = "crafts-stack"
version = "0.1.0"
description = "Tools for HI filament stacking with CRAFTS survey"
readme = "README.md"
authors = [
    { name = "dyliu0312", email = "liudy0312@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "h5py>=3.14.0",
    "healpy>=1.17.3",
    "matplotlib>=3.9.4",
    "mytools",
    "numpy>=1.26.4",
    "tqdm>=4.67.1",
]

[project.scripts]
crafts-stack = "crafts_stack:main"

[project.optional-dependencies]
prepare = [
    "pandas>=2.3.3",
    "skyproj>=2.1.1",
]
mock = [
    "mpi4py>=4.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
mytools = { git = "https://github.com/dyliu0312/mytools.git" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
