[metadata]
name = crafts_stack
version = 0.1.0
author = dyliu
author_email= liudy0312@gmail.com
# description = 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
include_package_data = True
install_requires =
    h5py
    numpy
    scipy
    astropy
    matplotlib
    healpy
    mytools
    mpi4py
    skyproj